fix: change overflow at slider wrapper

--- a/src/app/components/about/about.component.scss
+++ b/src/app/components/about/about.component.scss
@@ -259,7 +259,12 @@
   }
 
   .popup__wrapper {
-    width: 90%;
+    width: 100%;
+
+  }
+
+  .popup__title1{
+    padding-top: 20px;
   }
 }
 
